--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="app_name_amplyfm">AmplyFM</string>
     <string name="app_name">AmplyFM</string>
     <string name="search_artist">Busca</string>
     <string name="search_artist_hint">Buscar artistas</string>
